; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_javascript.c_push_file_content.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_javascript.c_push_file_content.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i32)* @push_file_content to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @push_file_content(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = call i8* @talloc_new(i32* null)
  store i8* %9, i8** %7, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = load i8*, i8** %7, align 8
  %14 = call i32 @s_push_file(i32* %10, i8* %11, i32 %12, i8* %13)
  store i32 %14, i32* %8, align 4
  %15 = load i8*, i8** %7, align 8
  %16 = call i32 @talloc_free(i8* %15)
  %17 = load i32, i32* %8, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %3
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @js_throw(i32* %20)
  br label %22

22:                                               ; preds = %19, %3
  ret void
}

declare dso_local i8* @talloc_new(i32*) #1

declare dso_local i32 @s_push_file(i32*, i8*, i32, i8*) #1

declare dso_local i32 @talloc_free(i8*) #1

declare dso_local i32 @js_throw(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
